RHEL 7 MongoDB is working!

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -4,9 +4,10 @@
 
   roles:
       - { role: kurron.time }
+      - { role: kurron.os-limits }
       - { role: kurron.transparent-huge-pages }
       - { role: kurron.block-device, bd_block_device: /dev/xvdf, bd_mount_point: /var/lib/mongo, bd_label: MONGODB }
-      - { role: kurron.mongodb, mongodb_version: 3.2 }
+      - { role: kurron.mongodb }
 
   post_tasks:
       - name: Print partition information
